src/main/resources/gitea/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: default
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      name: nginx
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 80
            protocol: TCP
          volumeMounts:
            - name: website-data-volume
              mountPath: "/data"
      volumes:
        - name: website-data-volume
          persistentVolumeClaim:
            claimName: website-data-pvc
