src/main/resources/gitea/website-server-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: website-server-service
  namespace: default
  annotations: 
    metallb.universe.tf/allow-shared-ip: "shared-ip-service-group"
spec:
  type: LoadBalancer
  selector:
    app: website-server
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
